# 2servelocalllm

./: .gitignore  GUIDE.md  PLAN-EMBEDDINGS.md  PLAN.md  docker-compose.yml  setup.sh
scripts/: ai-start.sh  proxy.py  start.sh
serve/: .dockerignore  Cargo.toml  Dockerfile  config.toml
serve/src/: config.rs  embedding.rs  error.rs  lib.rs  main.rs
serve/src/api/: anthropic.rs  middleware.rs  mod.rs  routes.rs  types.rs
serve/src/cache/: memory.rs  metrics.rs  mod.rs
serve/src/eval/: mod.rs  store.rs
serve/src/executor/: mod.rs  retry.rs
serve/src/observability/: logging.rs  metrics.rs
serve/src/process/: health.rs  mod.rs
serve/src/provider/: local.rs  mock.rs  mod.rs  registry.rs
serve/src/router/: advanced.rs  mod.rs  rule_based.rs
serve/tests/: api_test.rs
serve/tests/fixtures/: chat_completion.json  chat_completion_stream.txt
