[package]
name = "llm-serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
sha2 = "0.10"
lru = "0.12"
regex = "1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
